# codeone

./: .gitignore  docker-compose.yml
Spec/: 00_master_index.md  02_corpus_canonicalization_spec.md  03_scope_resolution_spec.md  04_data_model_spec.md  05_ontology_and_vocabularies_spec.md  06_query_resolution_spec.md  07_reliability_and_coverage_spec.md  08_golden_fixtures_spec.md  Candidate_Extraction_Layer.md  NCC_Spec_V5.md  pdf_ingestion_contract.json  pdf_ingestion_contract.md  validation_result.schema.json  xml_source_contract.json  xml_source_contract.md  xml_validation_result.schema.json
backend/: Dockerfile  pyproject.toml  requirements-docling.txt  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: contracts.py  database.py
backend/app/models/: document_strategy.py  persistence.py  validation.py
backend/app/services/: document_strategy.py  evaluation_profiles.py  extraction_profiles.py  ingestion.py  retention.py  xml_schema_registry.py
backend/app/services/extractors/: __init__.py  base.py  docling_stub.py  pdfplumber_extractor.py  pymupdf_style_extractor.py
backend/reports/: README.md
backend/tests/: test_clause_assembly.py  test_contract_conformance.py  test_corpus_smoke.py  test_docling_style_enrichment.py  test_document_strategy.py  test_pdf_only_candidate_workspace.py  test_retention.py  test_xml_schema_registry.py
backend/tools/: api_smoke_test.py  benchmark_extractors.py  docling_runtime_probe.py  test_protocol.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  (+1 more)
(+30 files in other folders)
