[project]
name = "ncc-ingestion-backend"
version = "0.1.0"
description = "FastAPI backend for NCC ingestion and compliance validation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "python-multipart>=0.0.20",
  "jsonschema>=4.23.0",
  "pdfplumber>=0.11.0",
  "docling>=2.84.0",
  "pydantic>=2.11.0",
  "sqlalchemy>=2.0.39",
  "psycopg[binary]>=3.2.6"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
